--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page1.html">Page 1</a> </li>
-                <li><a href = "page2.html">Page 2</a> </li>
-                <li><a href = "page3.html" >Page 3</a></li>
+                <li><a href = "page1.html">Marvel</a> </li>
+                <li><a href = "page2.html">Animated</a> </li>
+                <li><a href = "page3.html" >Barbie</a></li>
             </ul>
         </nav>
     </header> 
-    <main id="#main">
+    <main id="main">
         <h1>Home</h1>
-        <!-- <p> This is a website about college essentials or barbie or the ranking of disney and marvel movies </p> -->
-        <!-- <p> my freshman year i lived at bursley hall</p>
-        <p> it is notoriously known as one of the less nicer dorms at the university of michigan</p> -->
-        <!-- best movies subdivided by barbie, disney/pixar, marvel ?-->
-        <p>may contain spoilers</p>
+        
+        <p>i will give a brief review of my favorite movies and why they are my favorite <br> *may contain spoilers*</p>
     </main>   
     <!-- <footer>
         <p>University of Michigan School of Information <br/>
