--- a/page2.html
+++ b/page2.html
@@ -19,22 +19,21 @@
             </ul>
         </nav>
     </header>  
-    <main id="#main">
+    <main id="main">
         <h1>Animated Movies</h1>
-        <!-- <p> these will help you accomodate into a new room</p>
-        <p> shower shoes, extra drawers, backrest, shower caddy</p> -->
-        <!-- include check boxes so mark what items the person has -->
-        <p> handful of animated movies i find revolutionary</p>
+        
+        <!-- include check boxes to mark what the person has seen-->
+        <p> A handful of animated movies I find revolutionary or are simply just my favorite.</p>
         <ol>
-            <li>HTTYD franchise</li>
-            <li>cars franchise</li>
-            <li>brave</li>
-            <li>mulan</li>
-            <li>puss in boots the latest one</li>
-            <li>kung fu panda</li>
-            <li>spiderman into the spiderverse</li>
-            <li>big hero 6</li>
-            <li>wall-e</li>
+            <li>The How To Train Your Dragon Franchise</li>
+            <li>The Cars Franchise</li>
+            <li>Brave</li>
+            <li>Mulan</li>
+            <li>Puss in Boots: The Last Wish</li>
+            <li>Kung Fu Panda</li>
+            <li>Spider-Man: Into the Spiderverse</li>
+            <li>Big Hero 6</li>
+            <li>Wall-e</li>
         </ol>
         <img src="animated/httyd.jpg" alt="hiccup touches the dragon's nose">
         <img src="animated/cars.jpg" alt="cars gathered around lightning mcqueen on a dirt road">
