--- a/page3.html
+++ b/page3.html
@@ -19,19 +19,19 @@
             </ul>
         </nav>
     </header>  
-    <main id="#main">
+    <main id="main">
        <h1>Barbie Movies</h1> 
-       <!-- <p> these will help you work more efficiently </p>
-       <p> backup laptop charger, water bottle, desk lamp </p> -->
-       <p>these movies were my childhood and the most rewatched</p>
+       
+       <p>These movies were my childhood and the most rewatched.</p>
+       <p>Yes these are also animated, but not the same kind as the other page.</p>
       
        <ol>
-        <li>12 dancing princesses</li>
-        <li>fairytopia magic of the rainbow</li>
-        <li>princess and the pauper</li>
-        <li>3 musketeers</li>
-        <li>a mermaid tale</li>
-        <li>princess charm school</li>
+        <li>Barbie in The 12 Dancing Princesses</li>
+        <li>Barbie Fairytopia: Magic of the Rainbow</li>
+        <li>Barbie as the Princess and the Pauper</li>
+        <li>Barbie and The 3 Musketeers</li>
+        <li>Barbie in a Mermaid Tale</li>
+        <li>Barbie: Princess charm school</li>
         </ol>
         <img src="barbie/12dancing.jpeg" alt="barbie dancing ballet with sisters in the background">
         <img src="barbie/rainbow.webp" alt="barbie has rainbow wings in a rainbow dress">
