--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         </nav>
     </header> 
     <main id="main">
-        <h1>Home</h1>
+        <div class=" intro">
+            <h1>Home</h1>
         
-        <p>i will give a brief review of my favorite movies and why they are my favorite <br> *may contain spoilers*</p>
+            <p>i will give a brief review of my favorite movies and why they are my favorite </p>
+            <p>*may contain spoilers*</p>
+        </div>
+        
     </main>   
     <!-- <footer>
         <p>University of Michigan School of Information <br/>
