--- a/page2.html
+++ b/page2.html
@@ -25,26 +25,45 @@
             <!-- include check boxes to mark what the person has seen-->
             <p> A handful of animated movies I find revolutionary or are simply just my favorite.</p>
         </div>
-        <div class=" images">
+        <div class="images">
             <ol>
-                <h2>The How To Train Your Dragon Franchise</h2>
-                <img src="animated/httyd.jpg" alt="hiccup touches the dragon's nose">
-                <h2>The Cars Franchise</h2>
-                <img src="animated/cars.jpg" alt="cars gathered around lightning mcqueen on a dirt road">
-                <h2>Brave</h2>
-                <img src="animated/brave.jpg" alt="merida is hold a bow and arrow">
-                <h2>Mulan</h2>
-                <img src="animated/mulan.jpg" alt="mulan is posing with a horse">
-                <h2>Puss in Boots: The Last Wish</h2>
-                <img src="animated/boots.jpg" alt="puss in boots is pointing a sword in front of him">
-                <h2>Kung Fu Panda</h2>
-                <img src="animated/panda.jpg" alt="panda standing on a rock doing a high kick">
-                <h2>Spider-Man: Into the Spiderverse</h2>
-                <img src="animated/spiderman.jpg" alt="spiderman is falling towards the buildings">
-                <h2>Big Hero 6</h2>
-                <img src="animated/big-hero.jpg" alt="baymax is popping his head out from the side">
-                <h2>WALL-E</h2>
-                <img src="animated/walle.jpg" alt="walle is on the moon with earth in the background">
+                <div class="httyd">
+                    <h2>How To Train Your Dragon Franchise</h2>
+                    <img src="animated/httyd.jpg" alt="hiccup touches the dragon's nose">
+                </div>  
+                <div class="cars">
+                    <h2>Cars Franchise</h2>
+                    <img src="animated/cars.jpg" alt="cars gathered around lightning mcqueen on a dirt road">
+                </div>
+                <div class="brave">
+                    <h2>Brave</h2>
+                    <img src="animated/brave.jpg" alt="merida is hold a bow and arrow">
+                </div>
+                <div class="mulan">
+                    <h2>Mulan</h2>
+                    <img src="animated/mulan.jpg" alt="mulan is posing with a horse">
+                </div>
+                <div class="boots">
+                    <h2>Puss in Boots: The Last Wish</h2>
+                    <img src="animated/boots.jpg" alt="puss in boots is pointing a sword in front of him">
+                </div>    
+                <div class="panda">
+                    <h2>Kung Fu Panda</h2>
+                    <img src="animated/panda.jpg" alt="panda standing on a rock doing a high kick">
+                </div>    
+                <div class="spiderman">
+                    <h2>Spider-Man: Into the Spiderverse</h2>
+                    <img src="animated/spiderman.jpg" alt="spiderman is falling towards the buildings">
+                </div>
+                <div class="bighero">
+                    <h2>Big Hero 6</h2>
+                    <img src="animated/big-hero.jpg" alt="baymax is popping his head out from the side">
+                </div>
+                <div class="walle">
+                    <h2>WALL-E</h2>
+                    <img src="animated/walle.jpg" alt="walle is on the moon with earth in the background">
+                </div>
+
             </ol>
         </div>
         
