--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/page2.css">
     <title>Document</title>
 </head>
@@ -68,6 +69,10 @@
         </div>
         
     </main>
+    <footer>
+        <p>Celina Sarona <br/>
+          &copy; 2023</p>
+    </footer>
     
 </body>
 </html>
