--- a/animated.html
+++ b/animated.html
@@ -73,6 +73,7 @@
     <footer>
         <p>Celina Sarona <br/>
           &copy; 2023</p>
+          <a href = "contact.html">Contact</a>
     </footer>
     
 </body>
